2012-01-24 Christophe Jorssen <cjorssen@users.sourceforge.net>

	- Fix a bug in tikz polar coordinates (reported on tex.se
	http://tex.stackexchange.com/questions/41828/using-math-in-tikz):
	braces around a delimited argument are removed.

2012-01-10 Christophe Jorssen <cjorssen@users.sourceforge.net>

	- Fix a bug in pgfmath != operator (reported and fixed on tex.se
	http://tex.stackexchange.com/questions/40605/using-in-pgfmathparse)

2012-01-09 Christophe Jorssen <cjorssen@users.sourceforge.net>

	- Fix a pgfmath dependency for pgffor.

2012-01-03 Till Tantau <tantau@users.sourceforge.net>

	- Added pos support to the arc command (finally...).
	- Added support to the graph library for drawing tries.
	- Added support to the graph library for adding edge labels in
	  an easier way.

2011-12-29 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- Added the 'fixed relative' number formatting style.

2011-12-28 Christian Feuersaenger <ludewich@users.sourceforge.net>
	
	- Added 'const plot mark mid' and 'jump mark mid' plot handlers.

2011-12-02 Till Tantau <tantau@users.sourceforge.net>

	- Renamed "layered drawing" to "layered layout" for
	consistency. 

2011-11-12 Christophe Jorssen <cjorssen@users.sourceforge.net>

	- More work on the lua math parser and evaluator.
	- Added wrappers for luatex primitives: \pgfutil@directlua,
	\pgfutil@ifluatex, \pgfutil@luaescapestring
	- Make lua code more lua 5.2 compatible

2011-11-11 Christophe Jorssen <cjorssen@users.sourceforge.net>

	- Work on the lua math parser and evaluator. Begin to merge Mark's
	code with mine.

2011-11-03 Christian Feuersaenger <ludewich@users.sourceforge.net>
	
	- added FPU support for ==, !=, <=, >=, ?

2011-10-29 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- fixed problem with pgf number printer: it introduced spurious spaces
	tracker id 3430171. Thanks to Clemens Koppensteiner for the bugfix.

2011-09-25 Christian Feuersaenger <ludewich@users.sourceforge.net>
