@@ -1,3 +1,6 @@
+2012-02-21 Christophe Jorssen <cjorssen@users.sourceforge.net>
+	- More work on the luamath parser and evaluator.
+
 2012-01-24 Christophe Jorssen <cjorssen@users.sourceforge.net>
 
 	- Fix a bug in tikz polar coordinates (reported on tex.se
